# nano-vllm-candle

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  sampling_params.rs  tp.rs
src/engine/: block_manager.rs  llm_engine.rs  mod.rs  scheduler.rs  sequence.rs
src/layers/: activation.rs  attention.rs  embed_head.rs  layernorm.rs  linear.rs  mod.rs  rotary_embedding.rs
src/models/: qwen3.rs
tests/: debug_layer_test.rs  layer_test.rs
