[package]
name = "nano-vllm-candle"
version = "0.1.0"
edition = "2024"

[lib]
name = "nano_vllm_candle"
path = "src/lib.rs"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[dependencies]
anyhow = "1.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
# Used for block manager hashing.
ahash = "0.8"
hashbrown = "0.16"
zerocopy = "0.8"
# Optional: text tokenizer for Qwen3 prompts.
# You will need to provide a tokenizer.json path at runtime.
tokenizers = "0.22"
# Logging
log = "0.4"
logforth = { version = "0.29.1", features = ["starter-log", "layout-text"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
